--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-icons/all-files": "^4.1.0",
     "next": "14.0.1",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0"
   },
