--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "swiper": "^11.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
